add text deco and link navbar css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <script src="https://kit.fontawesome.com/7d2b89d592.js" crossorigin="anonymous"></script>
     <title>Site Nature Emoi</title>
 </head>
-                        <!-- HAUT DE PAGE-->
+
+<!-- HAUT DE PAGE-->
 
 <body>
     <header>
@@ -27,20 +28,22 @@
                 <img src="images/logo.png" alt="logo">
                 <nav>
                     <ul class="navbar">
-                        <li>Accueil</li>
-                        <li>Nos meilleur ventes</a></li>
-                        <li>Nos plantes</a></li>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="#best-seller-a">Nos meilleur ventes</a></li>
+                        <li><a href="#all-plant-a">Nos plantes</a></li>
                     </ul>
                 </nav>
             </div>
             <div>
-                <h1>Nature Emoi,<br> meilleur que le <br> chocolat.</h1>
+                <h1><a class="title-color">N</a>ature <a class="title-color">E</a>moi,<br> meilleur que le <br>
+                    chocolat.</h1>
             </div>
         </section>
 
     </header>
-                        <!--ICON PAGE-->
-                        
+
+    <!--ICON PAGE-->
+
     <section class="services">
 
         <div class="service-content">
@@ -59,9 +62,11 @@
         </div>
 
     </section>
-                     <!--MEILLEURS VENTES-->
 
-    <h2 class="title-bestseller">Nos meilleures ventes</h2>
+ <!--MEILLEURS VENTES-->
+
+    <a id="best-seller-a"></a>
+    <h2 class="title-bestseller"><a class="title-color">N</a>os meilleures ventes</h2>
 
     <div class="bestseller">
 
@@ -92,9 +97,11 @@
 
     </div>
 
-                        <!--NOS PLANTES-->
+    <!--NOS PLANTES-->
 
-    <h2 class="title-plant">Nos plantes</h2>
+    <a id="all-plant-a"></a>
+
+    <h2 class="title-plant"><a class="title-color">N</a>os plantes</h2>
 
     <div class="all-plant">
         <div class="grid-plant">
@@ -136,7 +143,7 @@
             </a>
         </div>
     </div>
-                        <!--BAS DE PAGE-->
+    <!--BAS DE PAGE-->
     <foot>
         <div class="footer-flex">
             <p> @ 2020 - Nature Emoi</p>
